# Adiabatic-Quantum-Computation

./: .gitignore  README.md  pyproject.toml
aqc/: aqc.py  containers.py  hamiltonian.py  utils.py
experiments/eigenseries/: run.py
experiments/evolution_time/: run.py
experiments/hardware/: retrieve.py  submit.py
experiments/sa_sweep/: run.py
experiments/schedules/: run.py
experiments/small-benchmark/: benchmark.py
experiments/small_benchmark/: benchmark.py
experiments/spectral_gap/: run.py
experiments/trotter_steps/: run.py
report/: CMSE890_Project.bib  Report.tex
sa/: __init__.py  annealer.py  containers.py
